Add commitment index to key transparency monitor requests